Commit de actualización, falta paginación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,18 @@
-<nav>
-    <h1>APP DE PRÁCTICAS | ANGULAR 8 + REQRES.IN </h1>
-</nav>
+<head><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"></head>
+
+<br>
+<h1 style="padding-left:300px;" routerLink=""><span style="color: #333333;"><strong>&nbsp; APP DE PR&Aacute;CTICAS | ANGULAR 8 + REQRES.IN</strong></span></h1>
+<br>
 
 
+
+<hr />
+  <div style="padding-left:45px;">
+    <strong>&nbsp; &nbsp; <button routerLink="">Inicio</button></strong>
+    <strong>&nbsp; &nbsp; <button routerLink="/users/create">Creación de usuario</button></strong>
+    <strong>&nbsp; &nbsp; <button routerLink="/users">Vista de datos</button></strong>
+  </div>
+<hr />
 
 <div>
   <router-outlet></router-outlet>
